--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
   },
-  "homepage": "https://wiliyam.github.io/",
+  "homepage": "https://wiliyam.github.io/portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
